--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.10
+  fluttertoast: ^8.0.9
   hijri: ^3.0.0
   intl: ^0.17.0
   introduction_screen: ^3.0.2
